--- a/Team5BookStore/Team5BookStore.csproj
+++ b/Team5BookStore/Team5BookStore.csproj
@@ -166,12 +166,12 @@
     </Content>
     <Content Include="AllUsers.Master" />
     <Content Include="AnonUsers.Master" />
+    <Content Include="ShoppingCart.aspx" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <EntityDeploy Include="Models\BookStoreModels.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>BookStoreModels.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <Content Include="Login.aspx" />
     <Content Include="Models\BookStoreModels.edmx.diagram">
       <DependentUpon>BookStoreModels.edmx</DependentUpon>
     </Content>
@@ -186,7 +186,6 @@
       <DependentUpon>BookStoreModels.edmx</DependentUpon>
       <LastGenOutput>BookStoreModels.cs</LastGenOutput>
     </Content>
-    <Content Include="Register.aspx" />
     <Content Include="Resources\AdImages\ad_placeholder.gif" />
     <Content Include="Resources\BookCovers\9780060555665.jpg" />
     <Content Include="Resources\BookCovers\9780062377210.jpg" />
@@ -263,7 +262,6 @@
     <Content Include="Scripts\WebForms\WebForms.js" />
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
-    <Content Include="Test_M1.aspx" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
@@ -317,13 +315,6 @@
     <Compile Include="AllUsers.Master.designer.cs">
       <DependentUpon>AllUsers.Master</DependentUpon>
     </Compile>
-    <Compile Include="Login.aspx.cs">
-      <DependentUpon>Login.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Login.aspx.designer.cs">
-      <DependentUpon>Login.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Models\Advertisement.cs">
       <DependentUpon>BookStoreModels.tt</DependentUpon>
     </Compile>
@@ -366,19 +357,12 @@
       <DependentUpon>BookStoreModels.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Register.aspx.cs">
-      <DependentUpon>Register.aspx</DependentUpon>
+    <Compile Include="ShoppingCart.aspx.cs">
+      <DependentUpon>ShoppingCart.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Register.aspx.designer.cs">
-      <DependentUpon>Register.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Test_M1.aspx.cs">
-      <DependentUpon>Test_M1.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Test_M1.aspx.designer.cs">
-      <DependentUpon>Test_M1.aspx</DependentUpon>
+    <Compile Include="ShoppingCart.aspx.designer.cs">
+      <DependentUpon>ShoppingCart.aspx</DependentUpon>
     </Compile>
     <Compile Include="ViewSwitcher.ascx.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
