--- a/Team5BookStore/Team5BookStore.csproj
+++ b/Team5BookStore/Team5BookStore.csproj
@@ -381,6 +381,7 @@
     </Compile>
     <Compile Include="ShoppingCart.aspx.designer.cs">
       <DependentUpon>ShoppingCart.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Register.aspx.cs">
       <DependentUpon>Register.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
